--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="vendors/angular.js"></script>
+    <script src="scripts/client.js"></script>
     <title>Message Board</title>
 </head>
-<body>
+<body ng-app="MessagingApp" ng-controller="MessagingController as vm">
+
+    <h1>Full Stack Messaging</h1>
+
+    <form>
+        <input type="text" placeholder="Name">
+        <input type="text" placeholder="Message">
+        <input type="submit" value="Send">
+    </form>
+
+    {{vm.message}}
     
 </body>
 </html>
